tests/build/impl_ui_node/delegate_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
    |
9   | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
    |                                                       ^^^^^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotANode`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate_mut<U: UiNode + ?Sized>(d: &mut U) -> &mut U {
    |                            ------ required by this bound in `delegate_mut`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `zero_ui::core::UiNode::init`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `zero_ui::core::UiNode::deinit`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `zero_ui::core::UiNode::update`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
  --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
   |
9  | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
   |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
   |
  ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
   |
   |     fn event<A: EventUpdateArgs>(&mut self, ctx: &mut WidgetContext, args: &A);
   |                 --------------- required by this bound in `event`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> $DIR/delegate_expr_error_incorrect_type.rs:9:27
    |
9   | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
    |                           ^^^^^^^^^^^ the trait `UiNode` is not implemented for `NotANode`
    |
   ::: $WORKSPACE/zero-ui-core/src/ui_node.rs
    |
    |     pub fn delegate<U: UiNode + ?Sized>(d: &U) -> &U {
    |                        ------ required by this bound in `delegate`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `render`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `render_update`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `arrange`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> $DIR/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  |                                                       ^ the trait `UiNode` is not implemented for `NotANode`
  |
  = note: required by `measure`
